# libad9361-iio

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  COPYING.txt  Distribution.xml.cmakein  Doxyfile.in  JenkinsfileHW  README.md  ad9361.h  ad9361_8h.html  ad9361_8h_source.html  ad9361_baseband_auto_rate.c  ad9361_calculate_rf_clock_chain.c  ad9361_design_taps.c  ad9361_fmcomms5_phase_sync.c  ad9361_generate_fir_taps.c  ad9361_multichip_sync.c  annotated.html  appveyor.yml  azure-pipelines.yml  classes.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  group__FLAGS.html  group__TopLevel.html  index.html  libad9361-iio.iss.cmakein  libad9361.pc.cmakein  mainpage.dox  meson.build  modules.html  structfilter__design__parameters.html
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: doc.yml
CI/: build_win.ps1  generate_exe.ps1  install_deps_win.ps1
CI/azure/: prepare_assets.sh
CI/travis/: after_deploy  before_deploy  before_install_darwin  before_install_linux  ci-centos.sh  ci-debian.sh  ci-linux.sh  ci-ubuntu.sh  deploy  deploy.rsa.enc  inside_docker.sh  lib.sh  make_darwin  make_linux
apps/: CMakeLists.txt  ad9361_filter.c
bindings/: CMakeLists.txt
bindings/matlab/: CMakeLists.txt  ad9361-wrapper.h
bindings/python/: CMakeLists.txt  README.md  ad9361.py  requirements.txt  requirements_dev.txt  setup.py.cmakein  tasks.py
bindings/python/doc/: conf.py.in  functions.rst  index.rst
bindings/python/test/: test_ad9361.py
cmake/: DarwinPackaging.cmake  LinuxPackaging.cmake
debian/: .gitignore  changelog  control  copyright  libad9361-0.install  libad9361-dev.install  rules
filterdesigner/: internal_design_filter_cg.c  internal_design_filter_cg.def  internal_design_filter_cg.h  internal_design_filter_cg_emxutil.c  internal_design_filter_cg_emxutil.h  internal_design_filter_cg_types.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_defines.h  rt_nonfinite.c  rt_nonfinite.h  rtwtypes.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_9.js  classes_0.js  files_0.js  functions_0.js  groups_0.js  searchdata.js  variables_0.js  variables_1.js  variables_3.js  variables_4.js  variables_6.js  variables_8.js  variables_9.js  variables_a.js
test/: CMakeLists.txt  auto_rate.c  auto_rate_int8dec8.c  auto_rate_test_hw.c  bb_rate_test.c  bb_test_taps.txt  correct_taps.txt  filter_designer_hw.c  filter_designer_noos.c  filter_designer_test.c  fmcomms5_sync_test.c  fmcomms5_sync_test_ext_lo.c  gen_rates_test.c  meson.build  process.m  rateRX_1000000.taps  rateRX_20000000.taps  rateRX_60000000.taps  rateTX_1000000.taps  rateTX_10000000.taps  rateTX_20000000.taps  rateTX_60000000.taps  rate_10000000.taps  rate_60000000.taps  testLoadLibrary.m
tools/: CMakeLists.txt  ad9361_fm5_phase_sync.c
